argocd/demo/demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
spec:
  selector:
    app.kubernetes.io/name: demo-pod
  type: ClusterIP
  ports:
    - name: grpc
      protocol: TCP
      port: 9090
      targetPort: 9090
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: demo-pod
  template:
    metadata:
      labels:
        app.kubernetes.io/name: demo-pod
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
        sidecar.istio.io/userVolume: |
          [
            {
              "name": "pb-volume",
              "emptyDir": {}
            }
          ]
        sidecar.istio.io/userVolumeMount: |
          [
            {
              "name": "pb-volume",
              "mountPath": "/etc/envoy/protos",
              "readonly": true
            }
          ]
    spec:
      containers:
      - name: demo-container
        image: siyunp/demo-grpc-app:latest
        ports:
        - protocol: TCP
          containerPort: 9090  # gRPC
        - protocol: TCP
          containerPort: 8080  # HTTP

        resources:
          requests:
            cpu: "101m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"

        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 15
          timeoutSeconds: 10
          failureThreshold: 3
        
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 2

      volumes:
        - name: pb-volume
          emptyDir: {}
